Fixed alignment

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -7,8 +7,9 @@ color: #000000;
 }
 h1 { font-size: 1.45em; color: #000000; margin-bottom: 3px; }
 h1.big { font-size: 3em; }
-#header .logo h1 { padding-left: 110px;float: left; }
+#header .logo h1 { padding-left: 110px; float: left; }
 #header .logo img { top: -20px; }
+#header .logo .boring { left: 0px; }
 h1 .small { font-size: 0.4em; }
 h1 a { text-decoration: none }
 h2 { font-size: 1.3em; color: #000000; }
